--- a/meli-operacion-fuego-quasar/src/main/resources/application.properties
+++ b/meli-operacion-fuego-quasar/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8081
+current.position.satellite.kenobi=-500,-200
+current.position.satellite.skywalker=100,-100
+current.position.satellite.sato=-500,100
+
 
