--- a/meli-operacion-fuego-quasar/src/main/resources/application.properties
+++ b/meli-operacion-fuego-quasar/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8081
+meli.path.topsecret=/topsecret/
+meli.path.topsecret.split=/topsecret_split/
 current.position.satellite.kenobi=-500,-200
 current.position.satellite.skywalker=100,-100
 current.position.satellite.sato=-500,100
