Se agrega operación para almacenar en la BD los mensajes de los satelites

--- a/meli-operacion-fuego-quasar/src/main/resources/application.properties
+++ b/meli-operacion-fuego-quasar/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 meli.path.topsecret=/topsecret/
 meli.path.topsecret.split=/topsecret_split/
-current.position.satellite.kenobi=-500,-200
-current.position.satellite.skywalker=100,-100
-current.position.satellite.sato=-500,100
+spring.datasource.url=jdbc:mysql://localhost:3306/quasar_operation_db
+spring.datasource.username=topsecret
+spring.datasource.password=123456
 
 
