manejo de errores y excepciones

--- a/meli-operacion-fuego-quasar/src/main/resources/application.properties
+++ b/meli-operacion-fuego-quasar/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8081
-meli.path.topsecret=/topsecret/
-meli.path.topsecret.split=/topsecret_split/
+meli.path.topsecret=/topsecret
+meli.path.topsecret.split.post=/topsecret_split/{satellite_name}
+meli.path.topsecret.split.get=/topsecret_split
+meli.message.exception=No se puede determinar el mensaje
+meli.position.exception=No se puede determinar la posicion
 spring.datasource.url=jdbc:mysql://localhost:3306/quasar_operation_db
 spring.datasource.username=topsecret
 spring.datasource.password=123456
