Ajustes para el despliegue al EC2

--- a/meli-operacion-fuego-quasar/src/main/resources/application.properties
+++ b/meli-operacion-fuego-quasar/src/main/resources/application.properties
@@ -4,8 +4,8 @@ meli.path.topsecret.split.post=/topsecret_split/{satellite_name}
 meli.path.topsecret.split.get=/topsecret_split
 meli.message.exception=No se puede determinar el mensaje
 meli.position.exception=No se puede determinar la posicion
-spring.datasource.url=jdbc:mysql://localhost:3306/quasar_operation_db
-spring.datasource.username=topsecret
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://database-2.cya29k1ib7m2.us-east-1.rds.amazonaws.com:3306/quasar_operation_db
+spring.datasource.username=admin
+spring.datasource.password=mercadolibre042022
 
 
